# MPI_lab

./: CMakeLists.txt  config.json  main.cpp
headers/: config_processing.h  heat_calculation.h  matrix.h  matrix_manipulations.h  visualisation.h
src/: config_processing.cpp  heat_calculation.cpp  matrix_manipulations.cpp
visual/: visualisation.cpp
wrapper/: matrix.cpp
